Created NoShowQueue and GUI addPatient button

--- a/BloodTestSchedulerApp/nbproject/project.properties
+++ b/BloodTestSchedulerApp/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=BloodTestSchedulerApp
-main.class=bloodtestschedulerapp.BloodTestSchedulerApp
+main.class=bloodtestschedulerapp.TestSchedulerApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
